--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
           conn.onmessage = function (evt) {
             var messages = evt.data.split("\n");
             for (var i = 0; i < messages.length; i++) {
-              var item = document.createElement("div");
+              var item = document.createElement("pre");
               item.innerText = messages[i];
               appendLog(item);
             }
